--- a/Objective-C/OCMock_OCHamcrest/Podfile
+++ b/Objective-C/OCMock_OCHamcrest/Podfile
@@ -5,6 +5,7 @@ use_frameworks!
 target 'OCMock_OCHamcrest_Tests' do
   pod 'OCMock', '~> 3.3.1'
   pod 'OCHamcrest', '~> 6.0'
+  pod 'KNMParametrizedTests'
 end
 
 
