fix for building tests error

--- a/Cpp/SafeCast/Code/Tests/CMakeLists.txt
+++ b/Cpp/SafeCast/Code/Tests/CMakeLists.txt
@@ -17,12 +17,12 @@ set_property(TARGET ${TEST_TARGET_NAME} PROPERTY CXX_STANDARD 14)
 
 # Links the test program with GTest
 # Links the binary
-target_link_libraries(${TEST_TARGET_NAME} PRIVATE ${CONAN_LIBS} PRIVATE ${LIBRARY_NAME})
-# Links the headers directory
-target_include_directories(${TEST_TARGET_NAME} PRIVATE ${GTEST_INCLUDE_DIRS})
+message(STATUS "LIBS: ${CONAN_LIBS}")
 
-# Adds PThread library, because it is required by GTest.
-set_target_properties(${TEST_TARGET_NAME} PROPERTIES COMPILE_FLAGS -pthread LINK_FLAGS -pthread)
+target_link_libraries(${TEST_TARGET_NAME} PUBLIC ${CONAN_LIBS} PUBLIC ${LIBRARY_NAME})
+# Links the headers directory
+target_include_directories(${TEST_TARGET_NAME} PUBLIC ${GTEST_INCLUDE_DIRS})
+
 
 # Adds the test program to CMake test
 add_test(NAME ${TEST_TARGET_NAME} COMMAND ${TEST_TARGET_NAME})
